# gflownets-hubbard

./: .gitignore  LICENSE  README.md  Reward.py  checks.py  gflownet.py  gflownet_hubbard.py  pyproject.toml  visualize.py
checkpoints/gfn_checkpoint/: gfn.weights_large_hidden_size.h5  gfn.weights_long_training.h5  gfn.weights_short_training.h5
