[tool.poetry]
name = "gflownets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
scipy = "^1.13.0"
tensorflow = "^2.16.1"
jupyter = "^1.0.0"
seaborn = "^0.13.2"
tensorflow-probability = {extras = ["tf"], version = "^0.24.0"}
imageio = "^2.34.1"
pillow = "^10.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
